web-infras/parser/tests/fixtures/babel/es2020/nullish-coalescing-operator/no-paren-nullish-or/output.txt
[SyntaxError]: Nullish coalescing operator(??) requires parens when mixing with logical operators (1,7)
1|e ?? f ?? g || h;
 |     ^
